# tom

./: .gitignore  .travis.yml  Cargo.toml  README.md  bors.toml  build.rs  build.sh  deny.toml  index.html  main.js  main_bg.wasm
.cargo/: config
.github/workflows/: ci.yml
crates/tom/: Cargo.toml
crates/tom/examples/cargo-ed/: cargo_toml.rs
crates/tom/src/: caps.rs  line_index.rs  main.rs  req.rs  visitor.rs
crates/tom/tests/data/err/: datetime-malformed-no-secs.txt  empty-implicit-table.txt  float-leading-zero.txt  inline-table-linebreak.txt  integer-underscore-before.txt  key-after-array.txt  key-hash.txt  table-with-pound.txt
crates/tom/tests/data/inline/: test-array.json  test-doc.toml  test-doc.txt  test-inline-key.toml  test-inline.toml  test-val-array.json  test-val-array.txt  test-val-str.toml  test-val-unexpected.txt
crates/tom/tests/data/ok/: array-string-quote-comma-2.txt  arrayTables.json  boolean.txt  comments.toml  comments.txt  complex_config.json  dotted-keys.json  double-quote-escape.txt  escaped-escape.txt  inlineTables.json  key-special-chars.txt  long-integer.txt  raw-multiline-string.txt  raw-string.txt  simple.toml  table-array-table-array.txt  table-with-single-quotes.txt
crates/tom/tests/data/validation/: newlines-after-headre.txt
crates/tom/tests/suite/: edit.rs  factory.rs
crates/tom_lsp_server/: Cargo.toml
crates/tom_syntax/: Cargo.toml
crates/tom_syntax/examples/: api-walkthrough.rs
crates/tom_syntax/examples/cargo-ed/: cargo_toml.rs  main.rs
crates/tom_syntax/src/: chunked_text.rs  edit.rs  lib.rs  model.rs  rtree.rs  validator.rs  visitor.rs  walk.rs
crates/tom_syntax/src/ast/: generated.rs  mod.rs
crates/tom_syntax/src/parser/: grammar.rs  lexer.rs  mod.rs
crates/tom_syntax/src/symbol/: generated.rs  mod.rs
crates/tom_syntax/tests/data/err/: float-underscore-after-point.txt  integer-underscore-double.txt  key-after-array.json  key-two-equals.txt  smiley.toml  text-before-array-separator.txt
crates/tom_syntax/tests/data/inline/: test-array-table.json  test-doc.json  test-keys.toml  test-val-bool.json  test-val-bool.txt  test-val-inline.txt
crates/tom_syntax/tests/data/ok/: array-empty.txt  array-nospaces.txt  array-string-quote-comma.json  array-table-array-string-backslash.json  arrays2.json  bool.txt  boolean.json  comments-at-eof.txt  example.txt  implicit-and-explicit-after.txt  implicit-and-explicit-before.txt  integer.txt  key-equals-nospace.txt  key-numeric.txt  keys.json  numbers.json  string-nl.txt  string-simple.txt  table-array-many.txt  table-empty.txt  table-with-pound.txt  tables.toml  tables.txt
crates/tom_syntax/tests/data/validation/: newlines-inline-table.toml
crates/tom_syntax/tests/suite/: ast.rs  dir.rs  edit.rs  factory.rs  main.rs
editors/code/: .vscodeignore  package-lock.json  package.json  tsconfig.json
editors/code/src/: config.ts  extension.ts  highlighting.ts  main.ts  server.ts
examples/: api-walkthrough.rs
examples/cargo-ed/: cargo_toml.rs  main.rs  tests.rs
lsp/: Cargo.toml
lsp/code/: package.json
lsp/src/: algo.rs  caps.rs  main.rs  req.rs
src/: ast.rs  chunked_text.rs  cst.rs  edit.rs  events.rs  factory.rs  grammar.lalrpop  grammar.rs  ide.rs  intern.rs  lib.rs  model.rs  rtree.rs  symbol.rs  symbols.rs  text.rs  toml_ast.rs  toml_ast_ext.rs  tree.rs  validator.rs  visitor.rs  walk.rs
src/ast/: ext.rs  generated.rs  mod.rs
src/edit/: compose.rs  factory.rs  file_edit.rs  mod.rs  node_change.rs  text_edit.rs  tree_edit.rs  whitespace.rs
src/parser/: grammar.lalrpop  grammar.rs  lexer.rs  mod.rs
src/parsing/: grammar.lalrpop  grammar.rs  mod.rs
src/symbol/: generated.rs  mod.rs
tasks/: Cargo.toml
tasks/src/: gen_ast.rs  main.rs
tests/: api.rs  parser.rs
tests/suite/: ast.rs  dir.rs  edit.rs  factory.rs  main.rs  model.rs  util.rs
tests/testutils/: Cargo.toml
tom_wasm/: Cargo.toml
tom_wasm/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: codegen.rs  gen_ast.rs  lib.rs  main.rs  not_bash.rs  pre_commit.rs
xtask/src/codegen/: gen_ast.rs  gen_parser_tests.rs  gen_symbols.rs
xtask/tests/: tidy.rs
(+195 files in other folders)
