[package]
name = "tom"
version = "0.0.1"
authors = ["Aleksey Kladov <aleksey.kladov@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/matklad/tom"
description = """
Yet another format-preserving TOML parser/manipulator.
"""

[workspace]
members = ["tasks", "tests/testutils"]

[dependencies]
# public
text_unit = "0.1"

# private
itertools = "0.7"
lazy_static = "1"
m_lexer = "0.0.4"
regex = "1"
uncover = "0.1"
string-interner = "0.6"

[dev-dependencies]
testutils = { path = "tests/testutils", version = "0.0.0" }
failure = "0.1"
clap = "2"
