[package]
name = "xtask"
version = "0.0.0"
authors = ["Aleksey Kladov <aleksey.kladov@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/matklad/tom"
publish = false

[dependencies]
heck = "0.3.1"
pico-args = "0.3.1"
itertools = "0.9.0"
anyhow = "1.0"

[dev-dependencies]
walkdir = "2.3"
