[package]
name = "tom"
version = "0.1.0"
authors = ["Aleksey Kladov <aleksey.kladov@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/matklad/tom"
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
url_serde = "0.2.0"
crossbeam-channel = "0.4.4"
gen_lsp_server = "0.1.0"
failure = "0.1.2"
languageserver-types = "0.51.0"
superslice = "0.1.0"
flexi_logger = "0.10"
log = "0.4"
tom_syntax = { path = "../tom_syntax" }
