[package]
name = "tom_lsp_server"
version = "0.1.0"
authors = ["Aleksey Kladov <aleksey.kladov@gmail.com>"]

[dependencies]
serde = "1.0.71"
serde_derive = "1.0.71"
url_serde = "0.2.0"
crossbeam-channel = "0.2.6"
gen_lsp_server = "0.1.0"
failure = "0.1.2"
languageserver-types = "0.51.0"
superslice = "0.1.0"
flexi_logger = "0.10"
log = "0.4"
tom = { path = "../tom" }
