[package]
name = "tom_syntax"
version = "0.0.1"
authors = ["Aleksey Kladov <aleksey.kladov@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/matklad/tom"
description = """
Yet another format-preserving TOML parser/manipulator.
"""

[dependencies]
# public
text_unit = "0.1.5"

# private
regex = "1"
lazy_static = "1"
itertools = "0.9.0"
m_lexer = "0.0.4"
uncover = "0.1"
drop_bomb = "0.1.3"
rowan = "0.1.2"

[dev-dependencies]
failure = "0.1"
clap = "2"
serde_json = "1"
difference = "2"
